implemented login with email and password without hashing the password yet
