# backend/app/src/v1/api/login.py
@@ -16,23 +16,17 @@ import sqlite3
 import requests
 
 
-class AuthGoogleLogin(Resource):
+class Login(Resource):
     def post(self):
         print(g.json)
 
-        for param in ["googleAccessToken", "email"]:
+        for param in ["email", "password"]:
             if param not in g.json:
                 return {"errorMessage": f"param {param} not in body"}, 400
-
-        # verify googleAccessToken
-        r = requests.post(
-            f"https://www.googleapis.com/oauth2/v1/tokeninfo?access_token={g.json['googleAccessToken']}"
-        )
-        if r.status_code != 200:
-            return {"errorMessage": "invalid google access token"}, 400
+       
 
         # check email if already in database
-        # if not create user
+        # if not create user with that password
         conn = sqlite3.connect("database.db")
         c = conn.cursor()
         SQL = f"SELECT * FROM users where email=?;"
@@ -45,8 +39,8 @@ class AuthGoogleLogin(Resource):
             # create the user
             conn = sqlite3.connect("database.db")
             c = conn.cursor()
-            SQL = f"INSERT INTO users (email) values (?)"
-            c.execute(SQL, (g.json["email"],))
+            SQL = f"INSERT INTO users (email, password) values (?, ?)"
+            c.execute(SQL, (g.json["email"],g.json["password"],))
             conn.commit()
             # get the user id last inserted
             SQL = f"SELECT last_insert_rowid();"
@@ -55,12 +49,14 @@ class AuthGoogleLogin(Resource):
             conn.close()
             print(f"Created with user id {user_id}")
         else:
+            # verify email and password
+            if g.json["password"] != user[0][2]:
+                return {"errorMessage": "Invalid Password"}, 401
             user_id = user[0][0]
             print(f"user {g.json['email']} exists with id {user_id}")
 
         # create access token for the user
         access_token = create_access_token(identity=g.json["email"])
-        # return jsonify(access_token=access_token), 200
         response = {"accessToken": access_token, "user_id": user_id}
 
         return response, 200, None
